--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-pydantic
-pytest
-pettingzoo
-gymnasium
-numpy
-pygame
-scipy
+numpy>=2.1.1
+pettingzoo>=1.24.3
+pydantic>=2.9.1
+pygame>=2.6.0
+pytest>=8.3.3
+scipy>=1.14.1
