--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Run pytest
+name: Tests
 
 on:
   push:
@@ -26,6 +26,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt  # Assuming you have a requirements.txt file
 
-      - name: Run pytest
+      - name: Run Pytest
         run: |
           pytest
