ci: Updated setup.py and added release-type: python in workflow

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -21,4 +21,4 @@ jobs:
           token: ${{ secrets.RELEASE_PLEASE_GENERALS }}
           # this is a built-in strategy in release-please, see "Action Inputs"
           # for more options
-          release-type: simple
+          release-type: python
