--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -19,6 +19,7 @@ jobs:
           # (PAT) and configured it as a GitHub action secret named
           # `MY_RELEASE_PLEASE_TOKEN` (this secret name is not important).
           token: ${{ secrets.RELEASE_PLEASE_GENERALS }}
-          # this is a built-in strategy in release-please, see "Action Inputs"
-          # for more options
-          release-type: python
+          # optional. customize path to release-please-config.json
+          config-file: .github/release-please-config.json
+          # optional. customize path to .release-please-manifest.json
+          manifest-file: .github/.release-please-manifest.json
