--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,5 +26,12 @@ repos:
         entry: mypy --exclude 'examples/' --exclude 'tests/' --disable-error-code "annotation-unchecked" .
         pass_filenames: false
         language: system
-        types:
-          - python
+        types: [python]
+
+  - repo: local
+    hooks:
+      - id: run-pytest
+        name: Run tests
+        entry: make test
+        language: system
+        types: [python]
