--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@ repos:
     rev: v0.6.9
     hooks:
       - id: ruff
-        args: [ --fix ]
+        args: ["check", "--select", " E F I", "--fix"]
       - id: ruff-format
 
   - repo: local
