--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -1,7 +1,9 @@
-name: pre-commit hooks
+name: CI
 
 on:
   push:
+
+  workflow_dispatch:
 
 jobs:
   test:
@@ -23,4 +25,6 @@ jobs:
 
       - name: Run pre-commit hooks
         run: |
+          pre-commit clean
+          pre-commit install --install-hooks
           pre-commit run --all-files
