--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "Generals-RL"
+name = "generals-bots"
 version = "1.0.0"
 description = "Develop your agent for generals.io!"
 authors = ["Matej Straka <strakammm@gmail.com>"]
