--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -1,12 +1,13 @@
 name: CI
 
 on:
-  push:
-
   workflow_dispatch:
+  push:
+  pull_request:
+    branches: [master]
 
 jobs:
-  test:
+  ci:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,13 +19,24 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install dependencies
+      - name: Install poetry
+        uses: abatilo/actions-poetry@v2
+
+      - name: Setup a local virtual environment
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          poetry config virtualenvs.create true --local
+          poetry config virtualenvs.in-project true --local
+
+      - uses: actions/cache@v3
+        name: Define a cache for the virtual environment based on the dependencies lock file
+        with:
+          path: ./.venv
+          key: venv-${{ hashFiles('poetry.lock') }}
+
+      - name: Install project dependencies
+        run: poetry install --with dev
 
       - name: Run pre-commit hooks
         run: |
-          pre-commit clean
-          pre-commit install --install-hooks
-          pre-commit run --all-files
+          poetry run pre-commit install --install-hooks
+          poetry run pre-commit run --all-files
