fix: Fix project name in templates

--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -1,5 +1,5 @@
 name: '✨ Feature request'
-description: Suggest a new feature or enhancement for Code-Embedder.
+description: Suggest a new feature or enhancement for generals-bots.
 labels: [enhancement]
 
 body:
