--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,5 +1,5 @@
 name: '🐛 Bug report'
-description: Report an issue with Code-Embedder.
+description: Report an issue with generals-bots.
 labels: [bug]
 
 body:
@@ -10,7 +10,7 @@ body:
       options:
         - label: I have checked that this issue has not already been reported.
           required: true
-        - label: I have confirmed this bug exists on the [latest version](https://github.com/strakam/generals-bots) of Code-Embedder.
+        - label: I have confirmed this bug exists on the [latest version](https://github.com/strakam/generals-bots) of generals-bots.
           required: true
 
   - type: textarea
