--- a/.github/workflows/code-embedder.yml
+++ b/.github/workflows/code-embedder.yml
@@ -2,15 +2,23 @@ name: Code Embedder
 
 on: pull_request
 
+permissions:
+  contents: write
+
 jobs:
   code_embedder:
     name: "Code embedder"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.ref }}
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+
 
       - name: Run code embedder
-        uses: kvankova/code-embedder@v0.4.0
+        uses: kvankova/code-embedder@v0.5.1
         env:
-          GITHUB_TOKEN: ${{ secrets.CODE_EMBEDDER }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
