ci: change github token

--- a/.github/workflows/code-embedder.yml
+++ b/.github/workflows/code-embedder.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Run code embedder
         uses: kvankova/code-embedder@v0.5.1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.CODE_EMBEDDER }}
