--- a/.github/workflows/code-embedder.yml
+++ b/.github/workflows/code-embedder.yml
@@ -2,6 +2,9 @@ name: Code Embedder
 
 on: pull_request
 
+permissions:
+  contents: write
+
 jobs:
   code_embedder:
     name: "Code embedder"
@@ -9,6 +12,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.ref }}
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
 
 
       - name: Run code embedder
