ci: change yaml

--- a/.github/workflows/code-embedder.yml
+++ b/.github/workflows/code-embedder.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Run code embedder
         uses: kvankova/code-embedder@v0.5.1
         env:
-          GITHUB_TOKEN: ${{ secrets.CODE_EMBEDDER }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
