--- a/.github/workflows/code-embedder.yml
+++ b/.github/workflows/code-embedder.yml
@@ -1,6 +1,8 @@
 name: Code Embedder
 
-on: pull_request
+on:
+  pull_request_target:
+    types: [opened, synchronize]
 
 jobs:
   code_embedder:
@@ -10,9 +12,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 2
-          ref: ${{ github.event.pull_request.head.ref }}
-          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.event.pull_request.head.sha }}
 
 
       - name: Run code embedder
