ci: change yaml

--- a/.github/workflows/code-embedder.yml
+++ b/.github/workflows/code-embedder.yml
@@ -1,8 +1,10 @@
 name: Code Embedder
 
 on:
-  pull_request_target:
-    types: [opened, synchronize]
+  pull_request
+
+permissions:
+  contents: write
 
 jobs:
   code_embedder:
@@ -12,10 +14,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.pull_request.head.sha }}
+          fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.ref }}
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
 
 
       - name: Run code embedder
         uses: kvankova/code-embedder@v0.5.1
         env:
-          GITHUB_TOKEN: ${{ secrets.CODE_EMBEDDER }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
