refactor: move logic common to all envs to environment.py (renamed from game.py). Also, move padding to Observation.to_tensor.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,4 +36,5 @@ exclude = ["tests", "examples"]
 
 [tool.mypy]
 exclude = ["tests/", "examples/", "generals/agents/"]
+strict_optional = false
 follow_imports="silent"
