--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ gymnasium = "^1.0.0"
 pygame = "^2.6.0"
 scipy = "^1.14.1"
 python-socketio = {extras = ["client"], version = "^5.11.4"}
+numba = "^0.61.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.11.2"
