--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ pygame = "^2.6.0"
 scipy = "^1.14.1"
 python-socketio = {extras = ["client"], version = "^5.11.4"}
 numba = "^0.61.0"
+jax = "^0.8.2"
+jaxlib = "^0.8.2"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.11.2"
